# adk_training

./: .adk-ignore  .gitignore  .markdownlint.json  BUILD_SYSTEM_GUIDE.md  CODE_OF_CONDUCT.md  DISCUSSIONS_QUICKSTART.md  GITHUB_DISCUSSIONS_CONFIG.md  GOOGLE_SEARCH_FIX_SUMMARY.md  INFRASTRUCTURE_STABILITY_COMPLETED.md  MISSION_COMPLETE.md  MISSION_SUMMARY.md  Makefile  README.md  TABLE_OF_CONTENTS.md  TIL_INTEGRATION_SUMMARY.md  batch_generate_pdfs.py  how_to_create_perfect_tutorial.md  overview.md  package-lock.json  requirements.txt  roadmap.md  scratchpad.md  thought.md
til_implementation/til_context_compaction_20250119/: Makefile  README.md  app.py  pyproject.toml  requirements.txt
til_implementation/til_context_compaction_20250119/context_compaction_agent/: .env.example  __init__.py  agent.py
til_implementation/til_context_compaction_20250119/tests/: __init__.py  test_agent.py
til_implementation/til_custom_session_services_20251023/: .env.example  Makefile  PROJECT_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_entry_point_pattern.py  test_event_persistence.py  test_redis_integration.py  verify_redis_sessions.py  view_sessions.py
til_implementation/til_custom_session_services_20251023/custom_session_agent/: __init__.py  __main__.py  agent.py
til_implementation/til_custom_session_services_20251023/tests/: __init__.py  test_agent.py  test_imports.py  test_tools.py
til_implementation/til_opentelemetry_jaeger_20251118/: .env.example  Makefile  OTEL_ADK_OFFICIAL_GUIDE.md  README.md  pyproject.toml  requirements.txt  test_web_traces.py
til_implementation/til_opentelemetry_jaeger_20251118/math_agent/: __init__.py  agent.py  otel_config.py  tools.py
til_implementation/til_opentelemetry_jaeger_20251118/tests/: test_agent.py
til_implementation/til_pause_resume_20251020/: Makefile  README.md  app.py  pyproject.toml
til_implementation/til_pause_resume_20251020/pause_resume_agent/: .env.example  __init__.py  agent.py
til_implementation/til_pause_resume_20251020/tests/: __init__.py  test_agent.py
til_implementation/til_rubric_based_tool_use_quality_20251021/: Makefile  README.md  app.py  evaluate_tool_use.py  pyproject.toml  requirements.txt  test_config.json  tool_use_quality.evalset.json
til_implementation/til_rubric_based_tool_use_quality_20251021/tests/: test_agent.py  test_imports.py  test_structure.py
til_implementation/til_rubric_based_tool_use_quality_20251021/tool_use_evaluator/: .env.example  __init__.py  agent.py
tutorial_blog_implementation/adk_interactions_integration/: Makefile  README.md  pyproject.toml  requirements.txt
tutorial_blog_implementation/adk_interactions_integration/adk_interactions_agent/: .env.example  __init__.py  agent.py  demo.py  tools.py
tutorial_blog_implementation/deep_research_agent/: Makefile  README.md  pyproject.toml
tutorial_blog_implementation/interactions_api_basic/: Makefile  README.md  pyproject.toml  requirements.txt
tutorial_implementation/commerce_agent_e2e/: .env.example  .gitignore  DOMAIN_FOCUSED_SEARCH_GUIDE.md  Makefile  README.md  TESTING_GUIDE.md  commerce_agent_sessions.db  pyproject.toml  requirements.txt  runner_with_sqlite.py  test_google_search_fix.py  test_sqlite_adk_web.sh  test_url_fix.py
tutorial_implementation/tutorial02/: Makefile  README.md  pyproject.toml
tutorial_implementation/tutorial12/: Makefile  README.md  pyproject.toml  requirements.txt
tutorial_implementation/tutorial13/: Makefile  README.md  pyproject.toml  requirements.txt
tutorial_implementation/tutorial14/: Makefile  README.md  pyproject.toml  requirements.txt  streaming_output.txt
tutorial_implementation/tutorial15/: .env.example  AUDIO_SETUP.md  Makefile  README.md  pyproject.toml  requirements.txt  test_audio_debug.py
tutorial_implementation/tutorial16/: Makefile  README.md  demo.py  demo.txt  pyproject.toml  requirements.txt  test_hitl.py  test_mcp_integration.py
tutorial_implementation/tutorial17/: Makefile  README.md  pyproject.toml  requirements.txt  start_a2a_servers.sh  stop_a2a_servers.sh  test_a2a_quick.py
tutorial_implementation/tutorial18/: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
tutorial_implementation/tutorial19/: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
tutorial_implementation/tutorial21/: .adkignore  .env.example  Makefile  README.md  analyze_samples.py  demo.py  download_images.py  generate_mockups.py  pyproject.toml  requirements.txt
tutorial_implementation/tutorial23/: .env.example  COST_BREAKDOWN.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_OPTIONS_EXPLAINED.md  FASTAPI_BEST_PRACTICES.md  MIGRATION_GUIDE.md  Makefile  QUICK_REFERENCE.md  README.md  SECURITY_ANALYSIS_ALL_DEPLOYMENT_OPTIONS.md  SECURITY_RESEARCH_SUMMARY.md  SECURITY_VERIFICATION.md  pyproject.toml  requirements.txt
tutorial_implementation/tutorial24/: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
tutorial_implementation/tutorial25/: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
tutorial_implementation/tutorial27/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
tutorial_implementation/tutorial28/: Makefile  README.md  pyproject.toml  requirements.txt
tutorial_implementation/tutorial29/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
tutorial_implementation/tutorial30/: Makefile  README.md  TEST_PLAN.md  TROUBLESHOOTING_422.md  pyproject.toml  requirements.txt
tutorial_implementation/tutorial31/: Makefile  README.md  pyproject.toml  requirements.txt  sample_sales_data.csv
tutorial_implementation/tutorial32/: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt  sample_sales_data.csv  test_visualization_display.py
tutorial_implementation/tutorial32_advanced/: .gitignore  IMPLEMENTATION.md  Makefile  README.md  examples.py  main.py  pyproject.toml  requirements.txt
tutorial_implementation/tutorial33/: DEPLOY.md  Makefile  README.md  pyproject.toml  requirements.txt
(+1262 files in other folders)
