[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streaming_agent"
version = "0.1.0"
description = "Tutorial 14: Streaming Agent with Server-Sent Events (SSE)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-genai>=1.15.0",
    "google-adk>=1.16.0",
    "google-cloud-aiplatform>=1.60.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["streaming_agent*"]

[tool.setuptools.package-data]
streaming_agent = ["*.example"]