[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice_assistant"
version = "0.1.0"
description = "Tutorial 15: Live API and Audio - Real-Time Voice Interactions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.15.0",
    "pyaudio>=0.2.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools]
packages = ["voice_assistant"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=voice_assistant --cov-report=term-missing"
