[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artifact_agent"
version = "0.1.0"
description = "ADK Tutorial 19: Artifacts and File Management - Document processing with artifact storage"
authors = [
    {name = "ADK Training", email = "training@example.com"},
]
dependencies = [
    "google-genai>=1.15.0",
    "google-adk>=1.16.0",
]
requires-python = ">=3.9"
readme = "README.md"

[project.scripts]
artifact_agent = "artifact_agent.agent:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["artifact_agent*"]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"