[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "production_agent"
version = "0.1.0"
description = "Production deployment agent demonstrating deployment strategies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.15.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-v --cov=production_agent --cov-report=term-missing"

[tool.setuptools.packages.find]
where = ["."]
include = ["production_agent*"]
