[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tutorial29"
version = "0.1.0"
description = "Tutorial 29: Introduction to UI Integration - Quick Start Example"
requires-python = ">=3.9"
dependencies = [
    "google-adk>=1.16.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "ag-ui-adk>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]
exclude = ["frontend*", "tests*"]
