[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tutorial30"
version = "0.1.0"
description = "Tutorial 30: Next.js ADK Integration - Customer Support Agent"
requires-python = ">=3.9"
dependencies = [
    "google-adk>=1.15.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "ag-ui-adk>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]
exclude = ["nextjs_frontend*", "tests*"]
