[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_analysis_agent"
version = "1.0.0"
description = "Data analysis ADK agent with pandas and Chart.js visualization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.15.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "ag-ui-adk>=0.1.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=agent --cov-report=term-missing"
